Removing placeholder, upload prep

--- a/index.html
+++ b/index.html
@@ -1,12 +1,77 @@
-<!DOCTYPE html>
-<html>
+<!doctype html>
+<html class="no-js" lang="en-US">
+
 <head>
   <meta charset="utf-8">
-    <title>Noel Arzola</title>
+  <title>Noel Arzola | Front-end Developer</title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="apple-touch-icon" href="icon.png">
+  <!-- Place favicon.ico in the root directory -->
+
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet">
+
+  <link rel="stylesheet" href="css/normalize.css">
+  <link rel="stylesheet" href="css/main.css">
+
+  <meta name="theme-color" content="#fafafa">
 </head>
+
 <body>
-  <h1>You found my page!</h1>
-  <h2>Okay, you got me</h2>
-    <p>You see, this is just a placeholder for now. Come back soon!</p>
+  <!--[if IE]>
+    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
+  <![endif]-->
+
+  <!-- Add your site or application content here -->
+  <div class="content-wrapper">
+    
+    <header>
+      <h1>Welcome to my Github site!</h1>
+      <p>I'm Noel Arzola, a Front-End Developer based in Ohio. I code with HTML, CSS, JavaScript, and jQuery. I also have experience working with Git and version control, SQL, and some WordPress and PHP. You can contact me at <a href="mailto:noel@noelarzola.com" target="_blank">noel@noelarzola.com</a> and 740-315-8315.</p>
+    </header>
+
+    <section class="content">
+      <div class="profile">
+        <img class="profile-image" src="img/profile-image.jpg" alt="Picture of me, Noel Arzola, smiling">
+      </div>
+
+      <div class="page-list">
+        <h2>Here are the links to all of my Github hosted pages. You can view the code for these as well as all my other projects <a href="https://github.com/NoelArzola?tab=repositories" target="_blank">here</a>.</h2>
+
+        <ul>
+          <li><a href="https://noelarzola.github.io/portfolio-website/" target="_blank">Personal Site</a></li>
+          <li><a href="https://noelarzola.github.io/unplugged/" target="_blank">Unplugged</a></li>
+          <li><a href="https://noelarzola.github.io/magic-8-ball/" target="_blank">Magic 8-Ball</a></li>
+          <li><a href="https://noelarzola.github.io/lolcat-clock/" target="_blank">LOLCat Clock</a></li>
+          <li><a href="https://noelarzola.github.io/jubilee/" target="_blank">Jubilee Austen</a></li>
+          <li><a href="https://noelarzola.github.io/rogue-pickings/" target="_blank">Rogue Pickings</a></li>
+          <li><a href="https://noelarzola.github.io/holstee-manifesto/" target="_blank">Holstee Manifesto</a></li>
+          <li><a href="https://noelarzola.github.io/brucelee-manifesto/" target="_blank">Bruce Lee Manifesto</a></li>
+        </ul>
+      </div> 
+
+      <div class="promo">
+        <h2>Be sure to check out my live <a href="https://www.noelarzola.com" target="_blank">portfolio site</a> while you're here!</h2>
+        <img class="portfolio-site-image" src="img/portfolio-image.png" alt="Image of noelarzola.com" width="300px">
+      </div>
+    </section>
+  </div> <!-- end page wrapper -->
+
+
+  <script src="js/vendor/modernizr-3.7.1.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+  <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
+  <script src="js/plugins.js"></script>
+  <script src="js/main.js"></script>
+
+  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
+  <script>
+    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
+    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
+  </script>
+  <script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
+
 </html>
