Added election map project

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
           <li><a href="https://noelarzola.github.io/portfolio-website/" target="_blank">Personal Site</a></li>
           <li><a href="https://noelarzola.github.io/unplugged/" target="_blank">Unplugged</a></li>
           <li><a href="https://noelarzola.github.io/magic-8-ball/" target="_blank">Magic 8-Ball</a></li>
+          <li><a href="https://noelarzola.github.io/us-election-map/" target="_blank">Interactive U.S. Election Map</a></li>
           <li><a href="https://noelarzola.github.io/lolcat-clock/" target="_blank">LOLCat Clock</a></li>
           <li><a href="https://noelarzola.github.io/jubilee/" target="_blank">Jubilee Austen</a></li>
           <li><a href="https://noelarzola.github.io/rogue-pickings/" target="_blank">Rogue Pickings</a></li>
