--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
       <div class="promo">
         <h2>Be sure to check out my live <a href="https://www.noelarzola.com" target="_blank">portfolio site</a> while you're here!</h2>
-        <img class="portfolio-site-image" src="img/portfolio-image.png" alt="Image of noelarzola.com" width="300px">
+        <a href="https://www.noelarzola.com" target="_blank"><img class="portfolio-site-image" src="img/portfolio-image.png" alt="Image of noelarzola.com"></a>
       </div>
     </section>
   </div> <!-- end page wrapper -->
