Finished up responsive design

--- a/index.html
+++ b/index.html
@@ -48,13 +48,14 @@
           <li><a href="https://noelarzola.github.io/lolcat-clock/" target="_blank">LOLCat Clock</a></li>
           <li><a href="https://noelarzola.github.io/jubilee/" target="_blank">Jubilee Austen</a></li>
           <li><a href="https://noelarzola.github.io/rogue-pickings/" target="_blank">Rogue Pickings</a></li>
+          <li><a href="https://noelarzola.github.io/rogue-pickings-responsive/" target="_blank">Rogue Pickings MK II (Responsive!)</a></li>
           <li><a href="https://noelarzola.github.io/holstee-manifesto/" target="_blank">Holstee Manifesto</a></li>
           <li><a href="https://noelarzola.github.io/brucelee-manifesto/" target="_blank">Bruce Lee Manifesto</a></li>
         </ul>
       </div> 
 
       <div class="promo">
-        <h2>Be sure to check out my live <a href="https://www.noelarzola.com" target="_blank">portfolio site</a> while you're here!</h2>
+        <h2>Please be sure to check out my <a href="https://www.noelarzola.com" target="_blank">portfolio site</a> while you're here!</h2>
         <a href="https://www.noelarzola.com" target="_blank"><img class="portfolio-site-image" src="img/portfolio-image.png" alt="Image of noelarzola.com"></a>
       </div>
     </section>
