removed gitignore in img folder, edited html to add github profile link

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
     <header>
       <h1>Welcome to my Github site!</h1>
-      <p>I'm Noel Arzola, a Front-End Developer based in Ohio. I code with HTML, CSS, JavaScript, and jQuery. I also have experience working with Git and version control, SQL, and some WordPress and PHP. You can contact me at <a href="mailto:noel@noelarzola.com" target="_blank">noel@noelarzola.com</a> and 740-315-8315.</p>
+      <p>Thanks for stopping by! I'm Noel Arzola, a Front-End Developer based in Ohio. I code with HTML, CSS, JavaScript, and jQuery. I also have experience working with Git and version control, SQL, and some WordPress and PHP. You can contact me at <a href="mailto:noel@noelarzola.com" target="_blank">noel@noelarzola.com</a> and 740-315-8315. Click <a href="https://www.github.com/noelarzola">here</a> to head straight to my Github Profile.</p>
     </header>
 
     <section class="content">
